# press_erp_sync

./: README.md  pyproject.toml
press_erp_sync/: api.py  hooks.py  modules.txt
press_erp_sync/doctype/press_subscription_log/: press_subscription_log.json
press_erp_sync/doctype/press_sync_settings/: press_sync_settings.json  press_sync_settings.py
press_erp_sync/integrations/doctype/press_subscription_log/: press_subscription_log.json
press_erp_sync/integrations/doctype/press_sync_settings/: press_sync_settings.json
press_erp_sync/press_sync/doctype/press_subscription_log/: press_subscription_log.json  press_subscription_log.py
press_erp_sync/press_sync/doctype/press_sync_settings/: press_sync_settings.json
